<resources>
    <string name="app_name">BlackCoffer</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="explore">Explore</string>
    <string name="network">Network</string>
    <string name="chat">Chat</string>
    <string name="contacts">Contacts</string>
    <string name="hashtags">Hashtags</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>