<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_bottom_explore"
        android:title="@string/explore"
        android:icon="@drawable/baseline_explore_24"/>

    <item
        android:id="@+id/nav_bottom_network"
        android:title="@string/network"
        android:icon="@drawable/ic_network"/>

    <item
        android:id="@+id/nav_bottom_chat"
        android:title="@string/chat"
        android:icon="@drawable/ic_chat"/>

    <item
        android:id="@+id/nav_bottom_contacts"
        android:title="@string/contacts"
        android:icon="@drawable/ic_contact_24"/>

    <item
        android:id="@+id/nav_bottom_hashtags"
        android:title="@string/hashtags"
        android:icon="@drawable/ic_hashtags"/>

</menu>